--- a/index.html
+++ b/index.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-       
-        <!---Important Meta Tags --->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
 
-        <!-- Title  -->
-        <title>JobClues</title>
+    <!---Important Meta Tags --->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Custom CSS  -->
-        <link rel="stylesheet" href="css/style.css">
+    <!-- Title  -->
+    <title>JobClues</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS  -->
+    <link rel="stylesheet" href="css/style.css">
 
 
-    </head>
+</head>
 
 
-    <body>
+<body>
 
-    </body>
+    <!-- Header -->
+    <section id="header">
+        <div class="menu-bar">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#"><img src="img/job-logo-white.png"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">All Jobs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Companies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Walk-In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Govt. Jobs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Internship</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </section>
+
+
+    <!-- Bootstrap and JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+</body>
 
 </html>
