Added banner section with job search form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,19 @@
                 </div>
             </nav>
         </div>
+        
+        <div class="banner text-center">
+            <h1>Jobs Around You</h1>
+            <p>Subscribe to JobClues Youtube Channel</p>
+        </div>
     </section>
+    
+    <div class="search-job text-center">
+        <input type="text" class="form-control" placeholder="Search Keyword">
+        <input type="text" class="form-control" placeholder="Search Company">
+        <input type="text" class="form-control" placeholder="Search Location">
+        <input type="button" class="btn btn-primary" placeholder="Search Location" value="Find Job">
+    </div>
 
 
     <!-- Bootstrap and JQuery -->
