Added top recruiters section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,38 @@
         <input type="text" class="form-control" placeholder="Search Location">
         <input type="button" class="btn btn-primary" placeholder="Search Location" value="Find Job">
     </div>
+    
+    <!-- Top Recruiter  -->
+    <section id="recruiters">
+        <div class="container text-center">
+            <h3 class="">Top Recruiters</h3>
+            <div>
+                <img src="img/dell.png">
+                <img src="img/oracle.png">
+                <img src="img/cisco.png">
+                <img src="img/netflex.png">
+                <img src="img/affect.png">
+                <img src="img/amazon.png">
+            </div>
+            <div>
+                <img src="img/Infosys.png">
+                <img src="img/byju.png">
+                <img src="img/indeed.png">
+                <img src="img/tnw.png">
+                <img src="img/DANONE.png">
+                <img src="img/IBM.png">
+            </div>
+            <div>
+                <img src="img/adobe.png">
+                <img src="img/IDC.png">
+                <img src="img/fadex.png">
+                <img src="img/wallmart.png">
+                <img src="img/microsoft.png">
+                <img src="img/forbes.png">
+            </div>
+        </div>
+    </section>
+    <!-- Top Recruiter Ends -->
 
 
     <!-- Bootstrap and JQuery -->
