Added footer section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,28 @@
             </div>
         </div>
     </section>
+    <!-- Sites Stats Ends -->
+    
+    <!-- App Banner  -->
+    <section id="app-banner" class="text-center">
+        <h1>Find Jobs on Mobile, Download Jobclues App</h1>
+        <img src="img/app-store.png">
+        <img src="img/play-store.png">
+    </section>
+    <!-- App Banner Ends  -->
+    
+    <!-- Footer -->
+    <section id="footer" class="text-center">
+       <img src="img/job-logo-black.png" alt="logo">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat iste, doloremque libero <br>facere magni blanditiis aut molestiae debitis.</p>
+       <a href="#"><img src="img/twitter-icon.png"></a>
+       <a href="#"><img src="img/facebook-icon.png"></a>
+       <a href="#"><img src="img/whatsapp-icon.png"></a>
+       <a href="#"><img src="img/linkedin-icon.png"></a>
+       <hr>
+       <p>Copyright &copy; 2020 | JobClues - By RookieOwl</p>
+    </section>
+    <!-- Footer Ends  -->
 
 
     <!-- Bootstrap and JQuery -->
