--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
     <!-- Custom CSS  -->
     <link rel="stylesheet" href="css/style.css">
+     
+    <!-- Responsive CSS  -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 </head>
@@ -130,7 +133,7 @@
                 <div class="job-update">
                     <h4><b>Azure Cloud Engineer(Junior)</b></h4>
                     <p>Microsoft</p>
-                    <i class="fa fa-briefcase"></i><span> 0 - 1 yrs</span><br>
+                    <i class="fa fa-briefcase"></i><span> 2 - 4 yrs</span><br>
                     <i class="fa fa-inr"></i><span> 3.50 - 4.00 Lacs p. a.</span><br>
                     <i class="fa fa-map-marker"></i><span> Bangalore</span>
                     <p>Skills <i class="fa fa-angle-double-right"></i><small> Java</small><small> Python</small><small> HTML,CSS</small><small> .Net</small></p>
@@ -148,7 +151,7 @@
                 <div class="job-update">
                     <h4><b>Software Engineer (Junior)</b></h4>
                     <p>DELL</p>
-                    <i class="fa fa-briefcase"></i><span> 0 - 1 yrs</span><br>
+                    <i class="fa fa-briefcase"></i><span> 2 - 4 yrs</span><br>
                     <i class="fa fa-inr"></i><span> 3.50 - 4.00 Lacs p. a.</span><br>
                     <i class="fa fa-map-marker"></i><span> Bangalore</span>
                     <p>Skills <i class="fa fa-angle-double-right"></i><small> Java</small><small> Python</small><small> HTML,CSS</small><small> .Net</small></p>
@@ -166,7 +169,7 @@
                 <div class="job-update">
                     <h4><b>Solution Architect (Senior)</b></h4>
                     <p>IBM</p>
-                    <i class="fa fa-briefcase"></i><span> 0 - 1 yrs</span><br>
+                    <i class="fa fa-briefcase"></i><span> 3 - 4 yrs</span><br>
                     <i class="fa fa-inr"></i><span> 3.50 - 4.00 Lacs p. a.</span><br>
                     <i class="fa fa-map-marker"></i><span> Bangalore</span>
                     <p>Skills <i class="fa fa-angle-double-right"></i><small> Java</small><small> Python</small><small> HTML,CSS</small><small> .Net</small></p>
@@ -184,7 +187,7 @@
                 <div class="job-update">
                     <h4><b>Scrum Master (Senior)</b></h4>
                     <p>Infosys</p>
-                    <i class="fa fa-briefcase"></i><span> 0 - 1 yrs</span><br>
+                    <i class="fa fa-briefcase"></i><span> 3 - 4 yrs</span><br>
                     <i class="fa fa-inr"></i><span> 3.50 - 4.00 Lacs p. a.</span><br>
                     <i class="fa fa-map-marker"></i><span> Bangalore</span>
                     <p>Skills <i class="fa fa-angle-double-right"></i><small> Java</small><small> Python</small><small> HTML,CSS</small><small> .Net</small></p>
