Added responsive style for 992px-1199px devices

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     
     <!-- App Banner  -->
     <section id="app-banner" class="text-center">
-        <h1>Find Jobs on Mobile, Download Jobclues App</h1>
+        <h1>Find Jobs on Mobile Download Jobclues App</h1>
         <img src="img/app-store.png">
         <img src="img/play-store.png">
     </section>
