--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <!-- Favicon  -->
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
 
     <!-- Custom CSS  -->
     <link rel="stylesheet" href="css/style.css">
