--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h5>Recent Updates</h5>
 
             <!-- Job Post 01-->
-            <div class="company-details wow fadeInRight">
+            <div class="company-details">
                 <div class="job-update">
                     <h4><b>Associate Software Engineer (Fresh Graduate)</b></h4>
                     <p>Oracle</p>
@@ -138,7 +138,7 @@
             </div>
 
             <!-- Job Post 02-->
-            <div class="company-details wow fadeInRight">
+            <div class="company-details">
                 <div class="job-update">
                     <h4><b>Azure Cloud Engineer(Junior)</b></h4>
                     <p>Microsoft</p>
@@ -156,7 +156,7 @@
             </div>
 
             <!-- Job Post 03-->
-            <div class="company-details wow fadeInRight">
+            <div class="company-details">
                 <div class="job-update">
                     <h4><b>Software Engineer (Junior)</b></h4>
                     <p>DELL</p>
@@ -174,7 +174,7 @@
             </div>
 
             <!-- Job Post 04-->
-            <div class="company-details wow fadeInRight">
+            <div class="company-details">
                 <div class="job-update">
                     <h4><b>Solution Architect (Senior)</b></h4>
                     <p>IBM</p>
@@ -192,7 +192,7 @@
             </div>
 
             <!-- Job Post 05-->
-            <div class="company-details wow fadeInRight">
+            <div class="company-details">
                 <div class="job-update">
                     <h4><b>Scrum Master (Senior)</b></h4>
                     <p>Infosys</p>
